
Users may notice that the memory loading for DBNameSpaceHandle class
has been reduced somewhat, as well.

90. [CLIENT] Converted the client's report window to use JTable, support printing

James replaced the old ARL-custom table component in the Ganymede
client with a Swing JTable-based keyed table.  This enabled fancier
sort control, and most especially made it possible to print query
reports.

-------------------- Changes from 1.0.11 to 1.0.12 -------------------

RELEASE DATE: March 1, 2004

1. [CLIENT] Properly update StringSelector count display on manual item entry

The StringSelector widget used to manipulate vectors of strings and
object references in the client was not properly updating the item
count when an item was manually entered through the text box.

2. [SERVER] Fixed regression in object event label display

I had neglected to edit the objectEventCustom.java class to cohere
with the change described in CHANGES 1.0.11#8.

3. [SERVER] Fixed exception vulnerability in admin console, scheduler code

We had an occasion in which the Ganymede scheduler terminated during
the server's normal operations, as a result of cascading failure in
the admin console notification system.  The changeStatus() method in
serverAdminProxy was not properly checking the done flag, so a
NullPointerException was thrown where the GanymedeAdmin code was only
expecting the possibility of a RemoteException.  The
NullPointerException was being thrown up through the Ganymede.debug()
call frame, which led to the scheduler being killed.

I have fixed the serverAdminProxy.changeStatus() method so that the
NullPointerException will not re-occur, and I have fixed the Ganymede
scheduler so that nothing but an actual interrupt on the scheduler
thread will cause the scheduler to terminate.

4. [SERVER] Turned off extraneous debug output from XML processing logic

I had accidentally left the debug flag enabled in the xmlobject and